--- a/cpp04/ex00/Makefile
+++ b/cpp04/ex00/Makefile
@@ -2,7 +2,7 @@ NAME			= animals
 OBJ				= obj/
 CXX				= c++
 CPPFLAGS		= -Wall -Wextra -Werror -std=c++98 -MD
-SRC_FILES		= Animal.cpp Cat.cpp Dog.cpp main.cpp
+SRC_FILES		= Animal.cpp WrongAnimal.cpp WrongCat.cpp Cat.cpp Dog.cpp main.cpp
 OBJ_FILES		= $(addprefix obj/,$(notdir $(SRC_FILES:.cpp=.o)))
 
 all : $(NAME)
