--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,7 +63,9 @@
     "sstream": "cpp",
     "stack": "cpp",
     "unordered_map": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "__functional_03": "cpp",
+    "filesystem": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "clang",
   "C_Cpp_Runner.cppCompilerPath": "clang++",
