--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -1,10 +1,10 @@
 NAME			= PmergeMe
 OBJ				= obj/
 CXX				= c++
-CPPFLAGS		= -Wall -Wextra -std=c++98 -MD -g #-fsanitize=address #-WERRRO!!!
+CPPFLAGS		= -Wall -Wextra -std=c++98 #-WERRRO!!!
 SRC_FILES		=  main.cpp PmergeMe.cpp
 OBJ_FILES		= $(addprefix obj/,$(notdir $(SRC_FILES:.cpp=.o)))
-NUM_INTS		= 50
+NUM_INTS		= 100
 
 all : $(NAME)
 
@@ -27,7 +27,8 @@ fclean : clean
 re : clean all
 
 rand : $(NAME)
-	@echo "Generating $(NUM_INTS) random integers..."
+	@make
+	@echo "Generating $(NUM_INTS) random non-unique integers..."
 	@awk 'BEGIN { srand(); for (i=1; i<=$(NUM_INTS); i++) printf("%d\n", int(1 + rand() * (50 - 1 + 1 ))); }' > rand_ints.txt
 	@echo "Running $(NAME) with random integers..."
 	@./$(NAME) `cat rand_ints.txt`
