--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -1,7 +1,7 @@
 NAME			= PmergeMe
 OBJ				= obj/
 CXX				= c++
-CPPFLAGS		= -Wall -Wextra -std=c++98 #-WERRRO!!!
+CPPFLAGS		= -Wall -Wextra -Werror -std=c++98 -fsanitize=address
 SRC_FILES		=  main.cpp PmergeMe.cpp
 OBJ_FILES		= $(addprefix obj/,$(notdir $(SRC_FILES:.cpp=.o)))
 NUM_INTS		= 100
@@ -29,8 +29,8 @@ re : clean all
 rand : $(NAME)
 	@make
 	@echo "Generating $(NUM_INTS) random non-unique integers..."
-	@awk 'BEGIN { srand(); for (i=1; i<=$(NUM_INTS); i++) printf("%d\n", int(1 + rand() * (50 - 1 + 1 ))); }' > rand_ints.txt
-	@echo "Running $(NAME) with random integers..."
+	@jot -r 300 1 $(NUM_INTS) | tr '\n' ' ' > rand_ints.txt
+	@echo "Running $(NAME) with random $(NUM_INTS) integers..."
 	@./$(NAME) `cat rand_ints.txt`
 
 .PHONY : all clean fclean re
